syntax = "proto3";
package productPackage;
message Product{
    int32 productID=1;
    string title=2;
    string price=3;
}

message ProductId{
    int32 productID=1;
}
message ProductList{
    repeated Product products;
}
message NewProduct {
    string title=1;
    string price=2;
}
message Empty{}
message Result {
    string status=1;
}
service ProductService {
    rpc ListProduct (Empty) returns (ProductList);
    rpc GetProduct (ProductId) returns (Product);
    rpc CreateProduct (NewProduct) returns (Result);
    rpc UpdateProduct (Product) returns (Result);
    rpc DeleteProduct(ProductId) returns (Result);
}